fix problem that move the body when click on download button mobile layout

--- a/Layout/css/style.css
+++ b/Layout/css/style.css
@@ -362,6 +362,7 @@ textarea {
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  margin-left: -13.2vw;
 }
 
 /* ----------------------------------------------------------  HEADER  ------------------------------------------------------  */
